fixed instructions text align for desktops

--- a/src/components/css/ExerciseInfo.css
+++ b/src/components/css/ExerciseInfo.css
@@ -34,6 +34,7 @@
 @media screen and (min-width: 850px) {
     .exercise-info {
         flex-direction: row;
+        align-items: flex-start;
     }
     .exercise-info-photo {
         width: 500px;
